<resources>
	<string name="app_name">Rakha User</string>
	<string name="title_activity_login">Sign in</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="welcome">"Welcome !"</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="for_real_price">Real price search</string>
	<string name="sign_in_to_your_account">Please sign in your account</string>
	<string name="sign_in">Sign in</string>
	<string name="create_new_account">Create new account</string>
	<string name="phone_number">Phone number</string>
	<string name="password">Password</string>
	<string name="full_name">Full name</string>
	<string name="progressCenter">Progress center</string>
	<string name="connection_problem">Connection problem,Please try again later</string>
	<string name="create_user_account">Create new user account</string>
	<string name="password_recovery">Password recovery</string>
	<string name="what_are_you_looking_for">What are you looking for</string>
	<string name="search">Search</string>
	<string name="show_all_products">Show all products</string>
	<string name="title_activity_home">HomeActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	
	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_share">Share</string>
	<string name="menu_send">Send</string>
	<string name="rakha_initiative">Rakha initiative</string>
	<string name="menu_main">Main</string>
	<string name="nav_favourite">Favourite</string>
	<string name="distribution_centers">Distribution centers</string>
	<string name="products_prices">Products prices</string>
	<string name="about_initiative">About initiative</string>
	<string name="contact_us">Contact us</string>
	<string name="sample_shopping_center">Shawadi Shopping Center</string>
	<string name="distance_string">Distance %d</string>
	<string name="sample_address">Omdorman , Aldoha</string>
	<string name="sample_product_name">Sugar SulphurFree</string>
	<string name="kilo_grams">%d Kg</string>
	<string name="retail_price">Retail price</string>
	<string name="wholesale_price">Wholesale price</string>
	<string name="price_string">%s SDG</string>
	<string name="favourite">Favourite</string>
	<string name="map">Map</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="rakha">Rakha</string>
</resources>
