<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_marginBottom="8dp"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<ImageView
		android:id="@+id/imageView3"
		android:layout_width="100dp"
		android:layout_height="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/sugar_product" />
	
	
	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/sample_product_name"
		android:textSize="14sp"
		android:fontFamily="@font/din_bold"
		app:layout_constraintStart_toEndOf="@+id/imageView3"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/kilo_grams"
		android:textSize="10sp"
		app:layout_constraintStart_toStartOf="@+id/textView6"
		app:layout_constraintTop_toBottomOf="@+id/textView6" />
	
	<Button
		android:id="@+id/button2"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="13dp"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:background="@drawable/transparent_orange_rounded"
		android:drawableEnd="@drawable/ic_favorite"
		android:drawableRight="@drawable/ic_favorite"
		android:drawablePadding="4dp"
		android:padding="8dp"
		android:text="@string/favourite"
		android:textColor="@color/colorPrimary"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<Button
		android:id="@+id/button3"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/rounded_accent_background"
		android:drawableEnd="@drawable/ic_placeholder"
		android:drawableRight="@drawable/ic_placeholder"
		android:text="@string/map"
		android:textSize="12sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/button2"
		app:layout_constraintStart_toStartOf="@+id/button2"
		app:layout_constraintTop_toBottomOf="@+id/button2" />
	
	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="10sp"
		android:layout_marginTop="8dp"
		android:text="@string/retail_price"
		app:layout_constraintStart_toStartOf="@+id/textView7"
		app:layout_constraintTop_toBottomOf="@+id/textView7" />
	
	<TextView
		android:id="@+id/textView10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:text="@string/wholesale_price"
		android:textSize="10sp"
		app:layout_constraintStart_toStartOf="@+id/textView8"
		app:layout_constraintTop_toBottomOf="@+id/textView8" />
	
	<TextView
		android:id="@+id/textView11"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:text="@string/price_string"
		android:textColor="@color/priceColor"
		app:layout_constraintBottom_toBottomOf="@+id/textView8"
		app:layout_constraintStart_toEndOf="@+id/textView8"
		app:layout_constraintTop_toTopOf="@+id/textView8" />
	
	<TextView
		android:id="@+id/textView12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginLeft="8dp"
		android:text="@string/price_string"
		android:textColor="@color/priceColor"
		app:layout_constraintBottom_toBottomOf="@+id/textView10"
		app:layout_constraintStart_toEndOf="@+id/textView10"
		app:layout_constraintTop_toTopOf="@+id/textView10" />
</androidx.constraintlayout.widget.ConstraintLayout>