<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:fontFamily="@font/din_bold"
		android:text="@string/sample_shopping_center"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:text="@string/distance_string"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView5" />
	
	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:fontFamily="@font/din_regular"
		android:text="@string/sample_address"
		android:textSize="10sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6" />
	
	<Button
		android:id="@+id/button2"
		style="@style/Widget.AppCompat.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="13dp"
		android:layout_marginEnd="24dp"
		android:drawablePadding="4dp"
		android:textColor="@color/colorPrimary"
		android:layout_marginRight="24dp"
		android:background="@drawable/transparent_orange_rounded"
		android:drawableEnd="@drawable/ic_favorite"
		android:text="Favourite"
		android:padding="8dp"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:drawableRight="@drawable/ic_favorite" />
	
	<Button
		android:id="@+id/button3"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/rounded_accent_background"
		android:drawableEnd="@drawable/ic_placeholder"
		android:drawableRight="@drawable/ic_placeholder"
		android:text="Map"
		android:textSize="12sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/button2"
		app:layout_constraintStart_toStartOf="@+id/button2"
		app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>